Add automatic API key configuration system
- Add config.js with placeholder values for easy setup
- Add my-keys.js for personal API keys (gitignored)
- Add setup-config.js interactive configuration script
- Update app.js to load keys from multiple sources
- Update .gitignore to protect personal API keys
- Add npm run setup command for easy configuration
- Improve settings UI to show configuration source

Users can now:
1. Run 'npm run setup' for interactive setup
2. Edit my-keys.js for personal keys (stays local)
3. Edit config.js for shared configuration

--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
         <p>Listening...</p>
     </div>
 
+    <script src="my-keys.js"></script>
+    <script src="config.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
