Add journal entry page with voice-to-text and fix Supabase integration
- Add journal.html: Dedicated journal entry page with voice-to-text functionality
- Add journal-app.js: Complete journal management with save/edit/delete
- Fix Supabase integration: Change upsert to insert, add better error handling
- Add comprehensive testing tools: debug pages, diagnostic tools, test utilities
- Update main app: Add navigation to journal page, improve voice recognition
- Add SQL fixes: RLS policy fixes and schema updates for Supabase
- Improve error handling: Better logging and user feedback
- Add demo page: Overview of both chat and write modes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button id="debugBtn" class="btn btn-secondary" style="font-size: 0.75rem;">🐛 Debug</button>
             <button id="searchBtn" class="btn btn-secondary">🔍 Search</button>
             <button id="settingsBtn" class="btn btn-secondary">⚙️ Settings</button>
+            <a href="journal.html" class="btn btn-secondary">📝 Write</a>
         </div>
         </header>
 
