Fix PWA configuration loading and add setup page
- Add setup.html: User-friendly configuration page for API keys
- Fix PWA configuration: Prioritize localStorage for PWA compatibility
- Update app.js: Load config from localStorage first for PWA mode
- Update journal-app.js: Better configuration loading for PWA
- Add configuration checks: Redirect to setup if no config found
- Improve PWA experience: Configuration persists across PWA sessions
- Fix GitHub Pages deployment: No API key exposure in code

--- a/index.html
+++ b/index.html
@@ -123,8 +123,26 @@
         <p>Listening...</p>
     </div>
 
+    <script src="production-config.js"></script>
     <script src="my-keys.js"></script>
     <script src="config.js"></script>
+    <script>
+        // Check if configuration is available
+        document.addEventListener('DOMContentLoaded', function() {
+            // Wait a bit for all scripts to load
+            setTimeout(function() {
+                const hasConfig = window.PRODUCTION_CONFIG?.OPENAI_API_KEY || 
+                                window.MY_KEYS?.OPENAI_API_KEY || 
+                                window.CONFIG?.OPENAI_API_KEY || 
+                                localStorage.getItem('openai_api_key');
+                
+                if (!hasConfig) {
+                    // Redirect to setup page if no configuration found
+                    window.location.href = 'setup.html';
+                }
+            }, 100);
+        });
+    </script>
     <script src="app.js"></script>
 </body>
 </html>
