--- a/journal.html
+++ b/journal.html
@@ -364,8 +364,26 @@
 
     <!-- Include the same scripts as main app for consistency -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="production-config.js"></script>
     <script src="my-keys.js"></script>
     <script src="config.js"></script>
+    <script>
+        // Check if configuration is available
+        document.addEventListener('DOMContentLoaded', function() {
+            // Wait a bit for all scripts to load
+            setTimeout(function() {
+                const hasConfig = window.PRODUCTION_CONFIG?.OPENAI_API_KEY || 
+                                window.MY_KEYS?.OPENAI_API_KEY || 
+                                window.CONFIG?.OPENAI_API_KEY || 
+                                localStorage.getItem('openai_api_key');
+                
+                if (!hasConfig) {
+                    // Redirect to setup page if no configuration found
+                    window.location.href = 'setup.html';
+                }
+            }, 100);
+        });
+    </script>
     <script src="journal-app.js"></script>
 </body>
 </html>
