--- a/journal.html
+++ b/journal.html
@@ -364,6 +364,7 @@
 
     <!-- Include the same scripts as main app for consistency -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="env-config.js"></script>
     <script src="production-config.js"></script>
     <script src="my-keys.js"></script>
     <script src="config.js"></script>
@@ -372,7 +373,8 @@
         document.addEventListener('DOMContentLoaded', function() {
             // Wait a bit for all scripts to load
             setTimeout(function() {
-                const hasConfig = window.PRODUCTION_CONFIG?.OPENAI_API_KEY || 
+                const hasConfig = window.ENV_CONFIG?.OPENAI_API_KEY || 
+                                window.PRODUCTION_CONFIG?.OPENAI_API_KEY || 
                                 window.MY_KEYS?.OPENAI_API_KEY || 
                                 window.CONFIG?.OPENAI_API_KEY || 
                                 localStorage.getItem('openai_api_key');
