Fix test page to include configuration scripts
- Add script tags for env-config.js, production-config.js, my-keys.js, config.js
- Test page was missing configuration scripts, causing fallback to localStorage
- Now test page will properly load Supabase configuration from env-config.js
- Fixes GitHub Pages Supabase configuration loading issue

--- a/test-live-supabase.html
+++ b/test-live-supabase.html
@@ -17,6 +17,12 @@
 <body>
     <h1>🧪 Test Live Supabase Connection</h1>
     
+    <!-- Load configuration scripts -->
+    <script src="env-config.js"></script>
+    <script src="production-config.js"></script>
+    <script src="my-keys.js"></script>
+    <script src="config.js"></script>
+    
     <div class="test">
         <h3>Step 1: Check Configuration</h3>
         <button onclick="checkConfig()">Check Configuration</button>
