--- a/journal.html
+++ b/journal.html
@@ -354,7 +354,7 @@
         <div class="entries-list">
             <div class="entries-header">
                 <h2>Your Journal Entries</h2>
-                <button id="refreshBtn" class="btn btn-secondary">🔄 Refresh</button>
+                <button id="refreshBtn" class="btn btn-secondary">🔄 Refresh Entries</button>
             </div>
             <div id="entriesContainer">
                 <!-- Entries will be loaded here -->
