--- a/journal.html
+++ b/journal.html
@@ -392,14 +392,18 @@
         // Register service worker for PWA functionality
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function() {
-                navigator.serviceWorker.register('/coachMe/sw.js')
+                console.log('Attempting to register service worker...');
+                navigator.serviceWorker.register('./sw.js')
                     .then(function(registration) {
-                        console.log('ServiceWorker registration successful');
+                        console.log('ServiceWorker registration successful with scope: ', registration.scope);
                     })
                     .catch(function(err) {
-                        console.log('ServiceWorker registration failed: ', err);
+                        console.error('ServiceWorker registration failed: ', err);
+                        console.error('Error details:', err.message);
                     });
             });
+        } else {
+            console.log('ServiceWorker not supported in this browser');
         }
     </script>
 </body>
