Make write mode the main home page
- Replaced index.html with write mode (journal.html content)
- Moved chat mode to chat.html
- Updated all navigation links to reflect new structure
- Updated demo page to link to chat.html for chat mode
- Main site now leads directly to write mode as primary experience

--- a/demo.html
+++ b/demo.html
@@ -209,7 +209,7 @@
                         <li>Search past conversations</li>
                     </ul>
                 </div>
-                <a href="index.html" class="mode-btn">Start Chatting</a>
+                <a href="chat.html" class="mode-btn">Start Chatting</a>
             </div>
         </div>
         
