--- a/github-pages.html
+++ b/github-pages.html
@@ -79,6 +79,12 @@
                 <button type="button" id="generateTitleBtn" class="btn-generate-title">📝 GENERATE TITLE</button>
                 <button type="submit" id="saveBtn" class="btn-save">Save Entry</button>
             </div>
+            
+            <div style="text-align: center; margin-top: 1rem;">
+                <a href="settings.html" style="color: #6366f1; text-decoration: none; font-size: 0.9rem;">
+                    ⚙️ Notification Settings
+                </a>
+            </div>
         </form>
         
         <!-- Entries List -->
