--- a/index.html
+++ b/index.html
@@ -625,6 +625,12 @@
                 <button id="generateTitleBtn" class="btn-generate-title">📝 Generate Title</button>
                 <button id="saveBtn" class="btn-save">Save Entry</button>
             </div>
+            
+            <div style="text-align: center; margin-top: 1rem;">
+                <a href="settings.html" style="color: #6366f1; text-decoration: none; font-size: 0.9rem;">
+                    ⚙️ Notification Settings
+                </a>
+            </div>
         </div>
 
         <!-- Entries List -->
