Make notification settings link more prominent
- Enhanced visual design with background and border
- Added descriptive text to explain the feature
- Made the link more button-like with better styling
- Should be much more visible to users
- Applied to both GitHub Pages and main index.html

--- a/github-pages.html
+++ b/github-pages.html
@@ -80,10 +80,13 @@
                 <button type="submit" id="saveBtn" class="btn-save">Save Entry</button>
             </div>
             
-            <div style="text-align: center; margin-top: 1rem;">
-                <a href="settings.html" style="color: #6366f1; text-decoration: none; font-size: 0.9rem;">
+            <div style="text-align: center; margin-top: 1.5rem; padding: 1rem; background: #f8fafc; border-radius: 8px; border: 1px solid #e2e8f0;">
+                <a href="settings.html" style="color: #6366f1; text-decoration: none; font-size: 1rem; font-weight: 500; display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.5rem 1rem; background: white; border-radius: 6px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
                     ⚙️ Notification Settings
                 </a>
+                <div style="font-size: 0.8rem; color: #6b7280; margin-top: 0.5rem;">
+                    Set daily reminders to write in your journal
+                </div>
             </div>
         </form>
         
