Make calendar reminder option more prominent and visible
- Enhanced calendar reminder section on main page with larger, more visible buttons
- Added prominent calendar option to settings page as alternative
- Improved styling with better contrast and borders
- Added clear descriptions of both notification methods
- Calendar reminders now more discoverable for users
- Both push notifications and calendar options clearly labeled

--- a/index.html
+++ b/index.html
@@ -626,17 +626,21 @@
                 <button id="saveBtn" class="btn-save">Save Entry</button>
             </div>
             
-        <div style="text-align: center; margin-top: 1.5rem; padding: 1rem; background: #f8fafc; border-radius: 8px; border: 1px solid #e2e8f0;">
-            <div style="display: flex; gap: 0.5rem; justify-content: center; flex-wrap: wrap; margin-bottom: 0.5rem;">
-                <a href="settings.html" style="color: #6366f1; text-decoration: none; font-size: 0.9rem; font-weight: 500; display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.5rem 1rem; background: white; border-radius: 6px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-                    ⚙️ Notification Settings
+        <div style="text-align: center; margin-top: 1.5rem; padding: 1.5rem; background: #f8fafc; border-radius: 12px; border: 2px solid #e2e8f0;">
+            <h3 style="margin: 0 0 1rem 0; color: #1f2937; font-size: 1.1rem;">🔔 Daily Reminders</h3>
+            <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; margin-bottom: 1rem;">
+                <a href="settings.html" style="color: #6366f1; text-decoration: none; font-size: 1rem; font-weight: 600; display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.75rem 1.5rem; background: white; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border: 2px solid #6366f1;">
+                    ⚙️ Push Notifications
                 </a>
-                <a href="calendar-notification.html" style="color: #10b981; text-decoration: none; font-size: 0.9rem; font-weight: 500; display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.5rem 1rem; background: white; border-radius: 6px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+                <a href="calendar-notification.html" style="color: #10b981; text-decoration: none; font-size: 1rem; font-weight: 600; display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.75rem 1.5rem; background: white; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border: 2px solid #10b981;">
                     📅 Calendar Reminders
                 </a>
             </div>
-            <div style="font-size: 0.8rem; color: #6b7280;">
-                Set daily reminders to write in your journal
+            <div style="font-size: 0.9rem; color: #6b7280; margin-bottom: 0.5rem;">
+                Choose your preferred reminder method:
+            </div>
+            <div style="font-size: 0.8rem; color: #9ca3af;">
+                <strong>Push Notifications:</strong> Browser-based • <strong>Calendar:</strong> Phone calendar (recommended)
             </div>
         </div>
         </div>
